# membership

./: .gitignore  Makefile  README.md  configure.ac  membership.c  membership.h  sysgroup.c  utils.c
src/: Makefile.am  grouplist.c  membership.c  membership.h  report.c  sysgroup.c  utils.c
tests/: Makefile.am  atconfig  check_membership.c
